Fix spacing on bills and tweets

--- a/static/styles.css
+++ b/static/styles.css
@@ -517,73 +517,84 @@ body {
   }
 }
 
-.tweet {
-  font-family: Helvetica;
-  text-align: left;
-  color: #14171A;
-  border: 2px black solid;
-  
+.tweet-all-sections {
+  padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
-  margin: auto;
-  padding: 1em;
-  
-  flex: 1;
+  height: 95%;
+  border: 1px black solid;
+  overflow: auto;
 }
-  
-  .tweet-head {
-    display: flex;
-  }
-    
-    .tweet-head-user {
-      margin: auto;
-      
-      flex:1;
-    }
-    
-    .tweet-head-user-name {
-      font-weight: bold;
-    }
-    
-    .tweet-head-user-sname {
-      color: #657786;
-    }
-    
-    .tweet-head img {
-      border-radius: 50%;
-      margin: 5px;
-      width: 20px;
-      height: 20px;
-      
-      flex:1;
-    }
-  
-  .tweet-foot {
-    color: #657786;
-    margin-top: 14px;
-  }
   
   .tweet-list {
     width: 100%;
     text-align: left;
-    overflow: auto;
     padding: 0px;
     margin-bottom: 5%;
   }
   
-  .tweets-title {
-    height: 5%;
-    text-align: center;
-    font-size: 25pt;
-    font-weight: normal;
-  }
+    .tweet {
+      font-family: Helvetica;
+      text-align: left;
+      color: #14171A;
+      border: 2px black solid;
+      
+      width: 100%;
+      margin: auto;
+      padding: 1em;
+      
+      flex: 1;
+    }
+      
+      .tweet-head {
+        display: flex;
+      }
+        
+        .tweet-head-user {
+          margin: auto;
+          
+          flex:1;
+        }
+        
+        .tweet-head-user-name {
+          font-weight: bold;
+        }
+        
+        .tweet-head-user-sname {
+          color: #657786;
+        }
+        
+        .tweet-head img {
+          border-radius: 50%;
+          margin: 5px;
+          width: 20px;
+          height: 20px;
+          
+          flex:1;
+        }
+      
+      .tweet-foot {
+        color: #657786;
+        margin-top: 14px;
+      }
+      
+      .tweets-title {
+        height: 5%;
+        text-align: center;
+        font-size: 25pt;
+        font-weight: normal;
+      }
   
 .bill-list {
   border: 1px black solid;
   width: 100%;
   height: 95%;
   text-align: left;
+  list-style-type: none;
   overflow: auto;
-  padding: 0px;
+  padding-top: 10px;
+  padding-left: 0px;
+  padding-bottom: 50px;
   margin-bottom: 5%;
 }
 
